projects/nkp/x-deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "3"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"podinfo"},"name":"podinfo","namespace":"test"},"spec":{"minReadySeconds":5,"progressDeadlineSeconds":60,"revisionHistoryLimit":5,"selector":{"matchLabels":{"app":"podinfo"}},"strategy":{"rollingUpdate":{"maxUnavailable":1},"type":"RollingUpdate"},"template":{"metadata":{"annotations":{"prometheus.io/port":"9797","prometheus.io/scrape":"true"},"labels":{"app":"podinfo"}},"spec":{"containers":[{"comma [...]
    creationTimestamp: "2026-07-29T21:56:35Z"
    generation: 9
    labels:
      app: podinfo
    name: podinfo
    namespace: test
    resourceVersion: "9396317"
    uid: 1d1f5d13-e38b-4735-9eb2-8e80731bfd4c
  spec:
    minReadySeconds: 5
    progressDeadlineSeconds: 60
    replicas: 0
    revisionHistoryLimit: 5
    selector:
      matchLabels:
        app: podinfo
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        annotations:
          prometheus.io/port: "9797"
          prometheus.io/scrape: "true"
        labels:
          app: podinfo
      spec:
        containers:
        - command:
          - ./podinfo
          - --port=9898
          - --port-metrics=9797
          - --grpc-port=9999
          - --grpc-service-name=podinfo
          - --level=info
          - --random-delay=false
          - --random-error=false
          image: ghcr.io/stefanprodan/podinfo:6.0.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/healthz
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: podinfod
          ports:
          - containerPort: 9898
            name: http
            protocol: TCP
          - containerPort: 9797
            name: http-metrics
            protocol: TCP
          - containerPort: 9999
            name: grpc
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/readyz
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "2"
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 64Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    conditions:
    - lastTransitionTime: "2026-07-29T21:56:35Z"
      lastUpdateTime: "2026-07-29T22:01:00Z"
      message: ReplicaSet "podinfo-6b5b7db6d" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2026-07-29T22:43:59Z"
      lastUpdateTime: "2026-07-29T22:43:59Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 9
    terminatingReplicas: 0
- apiVersion: autoscaling/v2
  kind: HorizontalPodAutoscaler
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"autoscaling/v2","kind":"HorizontalPodAutoscaler","metadata":{"annotations":{},"name":"podinfo","namespace":"test"},"spec":{"maxReplicas":4,"metrics":[{"resource":{"name":"cpu","target":{"averageUtilization":99,"type":"Utilization"}},"type":"Resource"}],"minReplicas":2,"scaleTargetRef":{"apiVersion":"apps/v1","kind":"Deployment","name":"podinfo"}}}
    creationTimestamp: "2026-07-29T21:56:35Z"
    name: podinfo
    namespace: test
    resourceVersion: "9396819"
    uid: f5de7a00-0551-4e13-be3a-79c4cdb0ac7c
  spec:
    maxReplicas: 4
    metrics:
    - resource:
        name: cpu
        target:
          averageUtilization: 99
          type: Utilization
      type: Resource
    minReplicas: 2
    scaleTargetRef:
      apiVersion: apps/v1
      kind: Deployment
      name: podinfo
  status:
    conditions:
    - lastTransitionTime: "2026-07-29T21:56:50Z"
      message: the HPA controller was able to get the target's current scale
      reason: SucceededGetScale
      status: "True"
      type: AbleToScale
    - lastTransitionTime: "2026-07-29T21:57:05Z"
      message: scaling is disabled since the replica count of the target is zero
      reason: ScalingDisabled
      status: "False"
      type: ScalingActive
    currentMetrics: null
    desiredReplicas: 0
    lastScaleTime: "2026-07-29T21:56:50Z"
kind: List
metadata: {}
