projects/nkp/podinfo-canary-service-out.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    helm.toolkit.fluxcd.io/driftDetection: disabled
    kustomize.toolkit.fluxcd.io/reconcile: disabled
  creationTimestamp: "2026-09-16T16:09:48Z"
  labels:
    app: podinfo-canary
  name: podinfo-canary
  namespace: test
  ownerReferences:
  - apiVersion: flagger.app/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: Canary
    name: podinfo
    uid: 7c8eebb1-8043-4770-b0bd-c85d9112649b
  resourceVersion: "15963883"
  uid: 2ed03fe8-21dc-4087-8646-da46db4b8fd7
spec:
  clusterIP: 10.100.78.212
  clusterIPs:
  - 10.100.78.212
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 9898
    protocol: TCP
    targetPort: 9898
  - name: http-metrics
    port: 9797
    protocol: TCP
    targetPort: 9797
  - name: grpc
    port: 9999
    protocol: TCP
    targetPort: 9999
  selector:
    app: podinfo
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
