projects/nkp/podinfo-primary-service-out.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    helm.toolkit.fluxcd.io/driftDetection: disabled
    kustomize.toolkit.fluxcd.io/reconcile: disabled
  creationTimestamp: "2026-09-16T16:09:48Z"
  labels:
    app: podinfo-primary
  name: podinfo-primary
  namespace: test
  ownerReferences:
  - apiVersion: flagger.app/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: Canary
    name: podinfo
    uid: 7c8eebb1-8043-4770-b0bd-c85d9112649b
  resourceVersion: "15963889"
  uid: 52837935-c269-4226-a8c6-e8b316b1c166
spec:
  clusterIP: 10.100.204.34
  clusterIPs:
  - 10.100.204.34
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 9898
    protocol: TCP
    targetPort: 9898
  - name: http-metrics
    port: 9797
    protocol: TCP
    targetPort: 9797
  - name: grpc
    port: 9999
    protocol: TCP
    targetPort: 9999
  selector:
    app: podinfo-primary
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
