projects/nkp/service-load-balancer-flagger-loadtester.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flagger-loadtester-service
  annotations:
        prometheus.io/scrape: 'true'
  labels:
    name: flagger-loadtester
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    name: flagger-loadtester
